fix alignment issues

--- a/styles/light.css
+++ b/styles/light.css
@@ -71,7 +71,7 @@ body {
 
 .clock {
     /* responsisve font size */
-    font-size: clamp(4rem, 10vw, 7rem);
+    font-size: clamp(4rem, 13vw, 7rem);
     font-weight: 900;
     color: rgba(255, 255, 255, 1);
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
